Making RSR module code compatible with Vassal 3.5.8 (removed all deprecation warnings, which should make it safe for 3.6.* too). Changed version in pom to 4.0.9 to match new module.